src/test/ui/rfc-2093-infer-outlives/cross-crate.stderr
error: rustc_outlives
  --> $DIR/cross-crate.rs:14:1
   |
LL | / struct Foo<'a, T> { //~ ERROR 14:1: 16:2: rustc_outlives
LL | |     bar: std::slice::IterMut<'a, T>
LL | | }
   | |_^
   |
   = note: T : 'a

error: aborting due to previous error

